--- a/package.json
+++ b/package.json
@@ -7,14 +7,27 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "daisyui": "^2.51.5",
+    "axios": "^1.7.2",
+    "daisyui": "^4.11.1",
+    "date-fns": "^3.6.0",
     "firebase": "^9.19.1",
+    "html-to-react": "^1.7.0",
+    "lottie-react": "^2.4.0",
+    "quill": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.8",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-photo-view": "^1.2.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-tooltip": "^5.26.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
